force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>Event</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>