force-app/main/default/objects/Event__c/fields/Date_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Event__c</fullName>
    <label>Date Of Event</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>