force-app/main/default/objects/Event__c/fields/Event_Co_Ordinator__c.field-meta.xml
<CustomField>
    <fullName>Event_Co_Ordinator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Co-Ordinator</label>
    <referenceTo>Event_Co_Ordinator__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>