force-app/main/default/objects/Event__c/fields/Hobbies_Needed__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Needed__c</fullName>
    <label>Hobbies Needed</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arts and crafts</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Reading books</fullName>
            </value>
            <value>
                <fullName>Singing</fullName>
            </value>
            <value>
                <fullName>Story telling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>