force-app/main/default/objects/Event__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>