force-app/main/default/objects/Event__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Users</label>
    <referenceTo>checkUser__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>